overflow fix

--- a/movies.css
+++ b/movies.css
@@ -7,9 +7,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
-html {
+html, body {
     scroll-behavior: smooth;
     overflow-x: hidden;
+    max-width: 100vw;
 }
 
 img {
@@ -156,18 +157,19 @@ BURGER MENU
     top: 0;
     left: 0;
     right: 0;
-    z-index: 11;
+    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: all 300ms ease;
     opacity: 0;
-    transform: translate(100%);
+    transform: translateX(0);
 }
 
 .menu--open .menu__backdrop {
+    z-index: 11;
     opacity: 1;
-    transform: translate(0);
+    transform: translateX(0);
 }
 
 .menu__list {
@@ -417,6 +419,6 @@ MOVIE DETAILS
     }
 
     .movie__detail--wrapper {
-        padding-left: 12px;
+        padding: 0 0 30px 12px;
     }
 }
