--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
-html {
+html, body {
     scroll-behavior: smooth;
     overflow-x: hidden;
+    max-width: 100vw;
 }
 
 img {
@@ -187,13 +188,13 @@ BURGER MENU
     justify-content: center;
     transition: all 300ms ease;
     opacity: 0;
-    transform: translate(100%);
+    transform: translateX(0);
 }
 
 .menu--open .menu__backdrop {
     z-index: 11;
     opacity: 1;
-    transform: translate(0);
+    transform: translateX(0);
 }
 
 .menu__list {
@@ -266,11 +267,5 @@ footer {
 
     footer {
         font-size: 16px;
-    }
-}
-
-@media (max-width: 550px) {
-    .movie-list__wrapper {
-        width: 100%;
     }
 }
